ui update bug fix
Rating bar and fix error from not showing

--- a/frontend/src/components/Progress/AnimeCard.css
+++ b/frontend/src/components/Progress/AnimeCard.css
@@ -35,6 +35,7 @@
     font-family: "Lato", Arial, sans-serif;
     font-weight: bold;
     font-size: 1.5rem;
+    user-select: none;
 }
 
 .card-progress-div {
@@ -76,8 +77,12 @@
     color: var(--black);
 }
 
-.card-progress-button:hover{
-    transform: translateY(-2px);
+.negative-button:hover {
+    background: var(--accent-300);
+}
+
+.positive-button:hover {
+    background: var(--primary-100);
 }
 
 .positive-button[disabled] {
@@ -162,7 +167,7 @@
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: translateY(-10px); /* Slightly move up */
+        transform: translateY(-10px);
     }
     to {
         opacity: 1;
@@ -171,5 +176,12 @@
 }
 
 .card-progress-button {
-    animation: fadeIn 0.5s forwards; /* Play animation on appear */
+    animation: fadeIn 0.5s forwards;
+}
+
+.anime-card-rating {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
 }
